# All-files-for-the-gaternity-

./: README.md
ARM/: ARM tutoria.s  LPCarm.s
BHL server/: admin.html  app.py  index.html
BynariumData/: BynariumData.lnk  Bynarium_Minecraft_edition.py  Bynarium_Minecraft_edition_V2.py  Bynarium_V32.py  Bynarium_V33.py  Bynarium_V34.py  Bynarium_V35.py  Bynarium_V36.py  Bynarium_V37 detalles.py  Bynarium_V37.py  Bynarium_V38.py  Bynarium_V39.py  Bynarium_V40.py  Bynarium_V42.py  Bynarium_V43.py  Bynarium_V44.py  Bynarium_V45.py
CityShopData/: CityShopV1.py  CityShopV10A9.py  CityShopV11A7.py  CityShopV12A7.py  CityShopV2.py  CityShopV3.py  CityShopV4.py  CityShopV5.py  CityShopV6A2.py  CityShopV7.py  CityShopV8.py  CityShopV9.py  CityShopV9A7.py
Desasbestecedor/: fórmula.txt
IRData/: Abstract.docx  IR proyect.docx  Iluminación Silenciosa - Pitch.docx
Landauer Buffer/: explanation.txt
Lenguaje N/: Agente_IA.N  Agente_IAclean.N  Coamndo  fundador (gracias Dios)  Control Áereo.N  Control Áereoclean.N  Definición del -Notor.py  Ejecutor completo.py  Ejecutor simple.py  Hexabyte.py  Inventario RRR.N  Inventory + chunk.N  Juego.N  NLang.py  Notor.py  Núcleo de Simulación N-Lang.py  Traductor N a Py.py  calc  calculador.N  calculo  compilador N.c  ejecutor ejemplo.py  ejecutor ejemplo1.py  ejecutor.py  exec.py  exec2.py  inventory.N  inventory:max.N  inventoryclean.N  juego.py  keywords function.py  lexer_NLang.py  sistema chunking minecraft.N
N-Lang/: Ideas  map.n
Nuanot/: Nuanot.nlang.txt  Nuanot.txt  doc.txt  yo  (+2 more)
python/BHL/erroe/: err  pyproject.toml
(+551 files in other folders)
