[build-system]
requires = ["briefcase"]
build-backend = "briefcase.backend"

[tool.briefcase]
project_name = "mi_proyecto_bhl"
bundle = "com.server.bhl"
name = "BHL App"
app_name = "BHL"
author = "Uziel Gamma"
description = "Una aplicación de juego de rol con IA. Ideal para hacer historias, con memoria infinita."
url = ""
version = "0.0.5"
requires = [
"requests~=2.32.3",
"rich~=13.7.1",
"kivy" # Asegúrate de que Kivy esté en la lista
]
license = { file = "LICENSE" }

[tool.briefcase.app.BHL]



sources = [
"BHL"
]


[tool.briefcase.app.BHL.android]
support_package = "python-android-support"
python_version = "3.8"
build_gradle_dependencies = [
"androidx.appcompat:appcompat:1.0.2",
"androidx.constraintlayout:constraintlayout:1.1.3",
"androidx.swiperefreshlayout:swiperefreshlayout:1.1.0",
]
